fixed signin route, scrollbar implemented

--- a/frontend/picstory/src/app/feed/newsfeed/newsfeed.component.css
+++ b/frontend/picstory/src/app/feed/newsfeed/newsfeed.component.css
@@ -5,3 +5,7 @@
 .uploader {
   margin-bottom: 10px;
 }
+
+.posts-results {
+  height: 10%;
+}
